Revision history for Perl extension Module::Build::Convert.

0.47_06 Sat Mar  3 14:43:00 CET 2007

 - Instead of deleting all single- & doublequotes in $value within 
   _parse_process_string(), now only leading and trailing quotes are 
   being removed.

 - Comments to be removed from the parsing string are now being
   properly escaped. The substitution in _parse_process_code() 
   was previously broken.

 - Integrated negative zero-width look-ahead assertion in the regular
   expression matching strings within _parse_makefile().

 - MakeMaker's MY:: subs are now being removed. The strings are
   fetched by _extract_sub().

 - Included the documentation of the -c switch in make2build.

0.47_05 Sun Feb 18 02:37:05 CET 2007

 - Comments "attached" to an argument and loose comments are properly
   processed.

 - Code chunks and variables are now being handled by Text::Balanced's
   extract_codeblock() and extract_variable().

 - A new configuration option has been introduced: 'Process_Code'.
   Processing "code" may be invoked via the -c parameter of make2build.

0.47_04 Wed Feb 14 00:28:41 CET 2007

 - In _debug_array_text() an attempt was made to dereference a non-
   reference. Changed variable content to reflect actual array reference.

0.47_03 Sun Feb 11 03:15:40 CET 2007

 - Moved large parts of the Makefile parser to external subroutines.

 - Deprecated use of inserting unknown Makefile chunks to the data
   structure and hence to the Build.PL generated. The according 
   subroutines haven't been removed, solely uncommented.

 - "Re-executing" the parser when processing multiple directories
   unleashed some malfunctionality: the current directory, that
   should be reprocessed was silently skipped, because we were
   shifting the directory array and didn't unshift but push the
   directory, which worked for a single directory, but not for
   multiples. Furthermore, re-displaying the list with pending
   items was surpressed in order to not confuse the user.
